# surface-dial-hyprland

./: Cargo.toml  LICENSE  Makefile  PRD.md  README.md  config.toml  surface-dial.service  theme.css
src/: config.rs  dial.rs  hypr_ipc.rs  main.rs  mode.rs  overlay.rs
src/modes/: appscroll.rs  hass_media.rs  hyprscroll.rs  mod.rs  volume.rs  zoom.rs
udev/: 10-surface-dial.rules
