[package]
name = "surface-dial-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
gtk4-layer-shell = "0.4"
evdev = "0.12"
udev = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
nix = { version = "0.29", features = ["ioctl", "fs"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
